      a release is needed for a demo.

0.24 Wed Jun 17 03:29:06 EDT 2009
    - made the srcfeature method always return something; it no longer depends
      on the call to the constructor to set it.
    - Made using organism information more robust; now checks abbreviation
      and "genus species", and if it fails at everything, throws an error.
    - Added an option to the Chado constructor called -reference_class that
      allows the user to specify what feature type_id to use as the srcfeature.
      For example, if you have motifs mapped to a polypeptide and that
      polypeptide mapped to a region, you can speicify either "region" or
      "polypeptide" for the reference_class.  Note that this does not
      automatically turn on recursive mapping, so by default, the motifs
      wouldn't be visible on the region.  I honestly don't know for sure if
      recursive mapping still works--I haven't tested it in a long time.
    - Fixed a bug that sometimes prevented GBrowse from finding the subfeatures
      of features (like mRNAs of genes couldn't be found).

0.25 Thu Apr 29 22:10:43 EDT 2010
    - Bumping version number to make CPAN happy.

0.26 Fri May 14 11:37:37 EDT 2010
    - Making the dbh method in Chado.pm create a db handle if one doesn't
      already exist (it is not clear to me how this happens, since the
      constructor for Chado.pm is supposed to create it, but whatever).
    - Silenced uninit squawks when gbrowse_details page is rendered

0.3 Fri Jun 25 09:32:01 EDT 2010
    - Added documentation for the Chado constructor
    - Changed the class method so that it always returns 'Sequence', which is
      really the right thing for it to do: class only makes sense in the
      context of Bio::DB::GFF.
    - Added a -fulltext option for using full text searching in postgres 8.4
      or better.  See perldoc Bio::DB::Das::Chado and gmod_chado_fts_prep.pl
      for more info.